# Rust-Web-Api

./: Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  models.rs
src/database/: secrets.rs
