[package]
name = "Rust-Web-Api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

#Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }

#AWS
aws-config = "1"
aws-sdk-secretsmanager = "1"